/*
  Kubernetes

  No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)

  The version of the OpenAPI document: v1.26.9+aa37255

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package openapitools;


message IoK8sApiCoreV1ContainerStateTerminated {

  // Container's ID in the format '<type>://<container_id>'
  string containerID = 207632732;

  // Exit status from the last termination of the container
  int32 exitCode = 512615384;

  // Time at which the container last terminated
  string finishedAt = 78279751;

  // Message regarding the last termination of the container
  optional string message = 5;

  // (brief) reason from the last termination of the container
  optional string reason = 4;

  // Signal from the last termination of the container
  int32 signal = 365597017;

  // Time at which previous execution of the container started
  string startedAt = 518181743;

}
