/*
  Kubernetes

  No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)

  The version of the OpenAPI document: v1.26.9+aa37255

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package openapitools;

import public "io_k8s_api_core_v1_aws_elastic_block_store_volume_source.proto";
import public "io_k8s_api_core_v1_azure_disk_volume_source.proto";
import public "io_k8s_api_core_v1_azure_file_volume_source.proto";
import public "io_k8s_api_core_v1_ceph_fs_volume_source.proto";
import public "io_k8s_api_core_v1_cinder_volume_source.proto";
import public "io_k8s_api_core_v1_config_map_volume_source.proto";
import public "io_k8s_api_core_v1_csi_volume_source.proto";
import public "io_k8s_api_core_v1_downward_api_volume_source.proto";
import public "io_k8s_api_core_v1_empty_dir_volume_source.proto";
import public "io_k8s_api_core_v1_ephemeral_volume_source.proto";
import public "io_k8s_api_core_v1_fc_volume_source.proto";
import public "io_k8s_api_core_v1_flex_volume_source.proto";
import public "io_k8s_api_core_v1_flocker_volume_source.proto";
import public "io_k8s_api_core_v1_gce_persistent_disk_volume_source.proto";
import public "io_k8s_api_core_v1_git_repo_volume_source.proto";
import public "io_k8s_api_core_v1_glusterfs_volume_source.proto";
import public "io_k8s_api_core_v1_host_path_volume_source.proto";
import public "io_k8s_api_core_v1_iscsi_volume_source.proto";
import public "io_k8s_api_core_v1_nfs_volume_source.proto";
import public "io_k8s_api_core_v1_persistent_volume_claim_volume_source.proto";
import public "io_k8s_api_core_v1_photon_persistent_disk_volume_source.proto";
import public "io_k8s_api_core_v1_portworx_volume_source.proto";
import public "io_k8s_api_core_v1_projected_volume_source.proto";
import public "io_k8s_api_core_v1_quobyte_volume_source.proto";
import public "io_k8s_api_core_v1_rbd_volume_source.proto";
import public "io_k8s_api_core_v1_scale_io_volume_source.proto";
import public "io_k8s_api_core_v1_secret_volume_source.proto";
import public "io_k8s_api_core_v1_storage_os_volume_source.proto";
import public "io_k8s_api_core_v1_vsphere_virtual_disk_volume_source.proto";

message IoK8sApiCoreV1Volume {

  // awsElasticBlockStore represents an AWS Disk resource that is attached to a kubelet's host machine and then exposed to the pod. More info: https://kubernetes.io/docs/concepts/storage/volumes#awselasticblockstore
  IoK8sApiCoreV1AWSElasticBlockStoreVolumeSource awsElasticBlockStore = 391488630;

  // azureDisk represents an Azure Data Disk mount on the host and bind mount to the pod.
  IoK8sApiCoreV1AzureDiskVolumeSource azureDisk = 458308406;

  // azureFile represents an Azure File Service mount on the host and bind mount to the pod.
  IoK8sApiCoreV1AzureFileVolumeSource azureFile = 458249047;

  // cephFS represents a Ceph FS mount on the host that shares a pod's lifetime
  IoK8sApiCoreV1CephFSVolumeSource cephfs = 290224091;

  // cinder represents a cinder volume attached and mounted on kubelets host machine. More info: https://examples.k8s.io/mysql-cinder-pd/README.md
  IoK8sApiCoreV1CinderVolumeSource cinder = 286593465;

  // configMap represents a configMap that should populate this volume
  IoK8sApiCoreV1ConfigMapVolumeSource configMap = 267597127;

  // csi (Container Storage Interface) represents ephemeral storage that is handled by certain external CSI drivers (Beta feature).
  IoK8sApiCoreV1CSIVolumeSource csi = 98809;

  // downwardAPI represents downward API about the pod that should populate this volume
  IoK8sApiCoreV1DownwardAPIVolumeSource downwardAPI = 423671012;

  // emptyDir represents a temporary directory that shares a pod's lifetime. More info: https://kubernetes.io/docs/concepts/storage/volumes#emptydir
  IoK8sApiCoreV1EmptyDirVolumeSource emptyDir = 127363074;

  // ephemeral represents a volume that is handled by a cluster storage driver. The volume's lifecycle is tied to the pod that defines it - it will be created before the pod starts, and deleted when the pod is removed.  Use this if: a) the volume is only needed while the pod runs, b) features of normal volumes like restoring from snapshot or capacity    tracking are needed, c) the storage driver is specified through a storage class, and d) the storage driver supports dynamic volume provisioning through    a PersistentVolumeClaim (see EphemeralVolumeSource for more    information on the connection between this volume type    and PersistentVolumeClaim).  Use PersistentVolumeClaim or one of the vendor-specific APIs for volumes that persist for longer than the lifecycle of an individual pod.  Use CSI for light-weight local ephemeral volumes if the CSI driver is meant to be used that way - see the documentation of the driver for more information.  A pod can use both types of ephemeral volumes and persistent volumes at the same time.
  IoK8sApiCoreV1EphemeralVolumeSource ephemeral = 26515870;

  // fc represents a Fibre Channel resource that is attached to a kubelet's host machine and then exposed to the pod.
  IoK8sApiCoreV1FCVolumeSource fc = 3261;

  // flexVolume represents a generic volume resource that is provisioned/attached using an exec based plugin.
  IoK8sApiCoreV1FlexVolumeSource flexVolume = 49558645;

  // flocker represents a Flocker volume attached to a kubelet's host machine. This depends on the Flocker control service being running
  IoK8sApiCoreV1FlockerVolumeSource flocker = 229519619;

  // gcePersistentDisk represents a GCE Disk resource that is attached to a kubelet's host machine and then exposed to the pod. More info: https://kubernetes.io/docs/concepts/storage/volumes#gcepersistentdisk
  IoK8sApiCoreV1GCEPersistentDiskVolumeSource gcePersistentDisk = 501365701;

  // gitRepo represents a git repository at a particular revision. DEPRECATED: GitRepo is deprecated. To provision a container with a git repo, mount an EmptyDir into an InitContainer that clones the repo using git, then mount the EmptyDir into the Pod's container.
  IoK8sApiCoreV1GitRepoVolumeSource gitRepo = 39331428;

  // glusterfs represents a Glusterfs mount on the host that shares a pod's lifetime. More info: https://examples.k8s.io/volumes/glusterfs/README.md
  IoK8sApiCoreV1GlusterfsVolumeSource glusterfs = 311444558;

  // hostPath represents a pre-existing file or directory on the host machine that is directly exposed to the container. This is generally used for system agents or other privileged things that are allowed to see the host machine. Most containers will NOT need this. More info: https://kubernetes.io/docs/concepts/storage/volumes#hostpath
  IoK8sApiCoreV1HostPathVolumeSource hostPath = 300697107;

  // iscsi represents an ISCSI Disk resource that is attached to a kubelet's host machine and then exposed to the pod. More info: https://examples.k8s.io/volumes/iscsi/README.md
  IoK8sApiCoreV1ISCSIVolumeSource iscsi = 100494479;

  // name of the volume. Must be a DNS_LABEL and unique within the pod. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
  string name = 3373707;

  // nfs represents an NFS mount on the host that shares a pod's lifetime More info: https://kubernetes.io/docs/concepts/storage/volumes#nfs
  IoK8sApiCoreV1NFSVolumeSource nfs = 108987;

  // persistentVolumeClaimVolumeSource represents a reference to a PersistentVolumeClaim in the same namespace. More info: https://kubernetes.io/docs/concepts/storage/persistent-volumes#persistentvolumeclaims
  IoK8sApiCoreV1PersistentVolumeClaimVolumeSource persistentVolumeClaim = 231740972;

  // photonPersistentDisk represents a PhotonController persistent disk attached and mounted on kubelets host machine
  IoK8sApiCoreV1PhotonPersistentDiskVolumeSource photonPersistentDisk = 174999443;

  // portworxVolume represents a portworx volume attached and mounted on kubelets host machine
  IoK8sApiCoreV1PortworxVolumeSource portworxVolume = 5900522;

  // projected items for all in one resources secrets, configmaps, and downward API
  IoK8sApiCoreV1ProjectedVolumeSource projected = 357960329;

  // quobyte represents a Quobyte mount on the host that shares a pod's lifetime
  IoK8sApiCoreV1QuobyteVolumeSource quobyte = 126990932;

  // rbd represents a Rados Block Device mount on the host that shares a pod's lifetime. More info: https://examples.k8s.io/volumes/rbd/README.md
  IoK8sApiCoreV1RBDVolumeSource rbd = 112692;

  // scaleIO represents a ScaleIO persistent volume attached and mounted on Kubernetes nodes.
  IoK8sApiCoreV1ScaleIOVolumeSource scaleIO = 300279795;

  // secret represents a secret that should populate this volume. More info: https://kubernetes.io/docs/concepts/storage/volumes#secret
  IoK8sApiCoreV1SecretVolumeSource secret = 369406289;

  // storageOS represents a StorageOS volume attached and mounted on Kubernetes nodes.
  IoK8sApiCoreV1StorageOSVolumeSource storageos = 78224802;

  // vsphereVolume represents a vSphere volume attached and mounted on kubelets host machine
  IoK8sApiCoreV1VsphereVirtualDiskVolumeSource vsphereVolume = 4287677;

}
